Started Game Arch Doc

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,3 +1,7 @@
 [editor_metadata]
 
 executable_path="/Applications/Godot.app/Contents/MacOS/Godot"
+
+[dialog_bounds]
+
+project_settings=Rect2(288, 200, 2304, 1400)
