Add initial game and menu scripts, scenes, and editor configurations

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,13 @@
-list=[]
+list=Array[Dictionary]([{
+"base": &"Node2D",
+"class": &"Game",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/scripts/game.gd"
+}, {
+"base": &"Control",
+"class": &"Menu",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/scripts/menu.gd"
+}])
