Rename game script to main and update references across the project

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -12,12 +12,12 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://src/scripts/game.gd]
+[res://src/scripts/main.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 0,
