--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,9 +1,9 @@
 list=Array[Dictionary]([{
 "base": &"Node2D",
-"class": &"Game",
+"class": &"Main",
 "icon": "",
 "language": &"GDScript",
-"path": "res://src/scripts/game.gd"
+"path": "res://src/scripts/main.gd"
 }, {
 "base": &"Control",
 "class": &"Menu",
