Update project structure and add game scene with UI elements. Added function to switch scenes and defauls in the Menu scene

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -10,4 +10,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://src/scripts/menu.gd"
+}, {
+"base": &"Node",
+"class": &"Utils",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/scripts/utils.gd"
 }])
