Finished Menu; finished state changer; added SignalBus
Menu is now finished, not centered however

State changer has been completed for current states

SignalBus implemented for ease of signal use

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -5,8 +5,9 @@ use_advanced_connections=false
 
 [dialog_bounds]
 
-project_settings=Rect2(288, 200, 2304, 1400)
+project_settings=Rect2(0, 347, 1920, 1243)
 create_new_node=Rect2(830, 370, 900, 700)
+editor_settings=Rect2(622, 319, 900, 700)
 
 [debug_options]
 
