--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# VSCode specific
 .vscode/settings.json
 .vscode/launch.json
-.godot/*
+
+# Godot 4+ specific ignores
+.godot/
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
